Fix: All Layout - Top-Bottom spacing not equal on the post when using Read More button

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -3553,6 +3553,12 @@ li.ast-masthead-custom-menu-items .ast-search-icon .astra-search-icon {
   margin-bottom: 0;
 }
 
+.page-content > .read-more,
+.entry-content > .read-more,
+.entry-summary > .read-more {
+  margin-bottom: 6px;
+}
+
 .comment-content a {
   word-wrap: break-word;
 }
